Changed the guess algorithm to use a list comprehension rather than nester for loops

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,10 @@
 save guesses
 
+caller
+	commands
+		Save guesses
+		full_guess / full / all_words -> print a list of all the potential words for each word 
+
 cashbreaker
 	make unused letters part of class?
 	make elimination algorithm
@@ -8,14 +13,14 @@ cashbreaker
 
 	move asssignment to cashbreaker class
 	d = {2:'a', 3:'b', 4:'s'}
-	ignore_letters = ''.join([value for key, value in d.items()])
-	sent ignore letters string to words.py
 
-fill
-	check for words with one option until no words found	
-	or if a few matches rule out values already in dict
 
 
 en_words.py
 	- in potential words
 		- double letters?
+
+	load letters once
+	raiser errors if dicnot found
+	us and uk dicts
+		where to find good ones
