--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@ caller
 		
 
 cashbreaker
+	use code_dict_letters property over the place
+
 	call find words once at start
 		def do(word_list)		
 
